make RAddons gray when not the right format, and also clean and reformat some code